# scalar

./: .asyncapi-tool  .claudeignore  .depcheckrc  .eslintrc.cjs  .gitattributes  .gitignore  .ls-lint.yml  .npmrc  .oxfmtrc.json  .prettierignore  .prettierrc  .prettierrc.cjs  .syncpackrc  AGENT.md  AGENTS.md  BARREL_FILE_EXAMPLES.md  BARREL_FILE_ISSUE_REPORT.md  CHANGELOG.md  CITATION.cff  CLAUDE.backup.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  DEPENDENCY-UPDATES-PLAN.md  Dockerfile  HOW_TO_REPRODUCE_FAVICON_ISSUE.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  analyze-barrel-files.js  barrel-file-analysis.json  biome.json  cloudbuild.json  cloudbuild.yaml  defillama-llms-complete.txt  defillama-openapi-free.json  (+28 more)
.changeset/: add-api-client-snapshot-tests.md  add-api-reference-benchmarks.md  add-asyncapi-upgrader.md  add-content-start-view-and-plugin-sidebar.md  add-copy-button-virtualized-code-blocks.md  add-query-http-method.md  add-sync-save-analytics.md  afraid-bags-dance.md  afraid-beds-sneeze.md  afraid-bugs-cry.md  afraid-carpets-watch.md  afraid-clouds-dream.md  afraid-dolls-clean.md  afraid-donuts-compete.md  afraid-geckos-wear.md  afraid-glasses-work.md  afraid-guests-vanish.md  (+4294 more)
integrations/rust/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json
integrations/rust/examples/: actix.rs  axum.rs  warp.rs
integrations/rust/src/: config.rs  lib.rs
integrations/rust/ui/: index.html
integrations/scalar_django_ninja/: README.md  pyproject.toml  requirements.txt
integrations/scalar_django_ninja/scalar_django_ninja/: scalar_django_ninja.py
(+2609 files in other folders)
